--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
 		<activity
 			android:name=".MainActivity"
 			android:exported="true"
-			android:theme="@style/Theme.BeFitOutfit">
+			android:theme="@style/Theme.BeFitOutfit.SplashScreen">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
